--- a/package.json
+++ b/package.json
@@ -1,19 +1,36 @@
 {
-  "name": "@dzackgarza/leaflet-map",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/dzackgarza/leaflet-map.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dzackgarza/leaflet-map/issues"
-  },
-  "homepage": "https://github.com/dzackgarza/leaflet-map#readme"
+	"name": "@dzackgarza/leaflet-map",
+	"version": "1.0.0",
+	"description": "",
+	"main": "dist/leaflet-map.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+ssh://git@github.com/dzackgarza/leaflet-map.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/dzackgarza/leaflet-map/issues"
+	},
+	"homepage": "https://github.com/dzackgarza/leaflet-map#readme",
+	"dependencies": {
+		"babel-core": "^6.26.0",
+		"babel-loader": "^7.1.2",
+		"css-loader": "^0.28.7",
+		"d3": "<4.0.0",
+		"d3-interpolate": "^1.1.5",
+		"file-loader": "^1.1.5",
+		"google-maps": "^3.2.1",
+		"image-webpack-loader": "^3.4.2",
+		"leaflet": "^1.2.0",
+		"leaflet-easyprint": "^2.1.9",
+		"leaflet-providers": "^1.1.17",
+		"less": "^2.7.3",
+		"less-loader": "^4.0.5",
+		"style-loader": "^0.19.0",
+		"webpack-merge": "^4.1.1"
+	}
 }
